--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "astro": "^5.9.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4"
+    "@astrojs/check": "^0.9.4",
+    "@biomejs/biome": "^1.9.4",
+    "typescript": "^5.8.3"
   }
 }
